--- a/templates/accounts/profile_cashier.html
+++ b/templates/accounts/profile_cashier.html
@@ -1,4 +1,5 @@
 {% extends 'cashier_base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Cashier Profile - {{ user.get_restaurant_name }}{% endblock %}
 
@@ -146,7 +147,7 @@
                         <div class="col-md-3">
                             <div class="card bg-light">
                                 <div class="card-body">
-                                    <h5 class="card-title text-success">$0.00</h5>
+                                    <h5 class="card-title text-success">{% currency_symbol %}0.00</h5>
                                     <p class="card-text small">Today's Revenue</p>
                                 </div>
                             </div>
