--- a/templates/admin_panel/manage_products.html
+++ b/templates/admin_panel/manage_products.html
@@ -1,4 +1,5 @@
 {% extends 'admin_panel/base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Manage Products - Admin Panel{% endblock %}
 
@@ -322,7 +323,7 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <span class="fw-bold text-success" style="font-size: 0.85rem;">${{ product.price|floatformat:2 }}</span>
+                                        <span class="fw-bold text-success" style="font-size: 0.85rem;">{% currency_symbol %}{{ product.price|floatformat:2 }}</span>
                                     </td>
                                     <td>
                                         {% if product.available_in_stock > 20 %}
