--- a/templates/admin_panel/product_detail.html
+++ b/templates/admin_panel/product_detail.html
@@ -1,3 +1,4 @@
+{% load restaurant_tags %}
 <div class="row g-4">
     <div class="col-md-4">
         {% if product.main_category.image %}
@@ -18,7 +19,7 @@
             </div>
             <div class="col-sm-6">
                 <label class="form-label text-muted small">Price</label>
-                <div class="fw-semibold text-success fs-5">${{ product.price|floatformat:2 }}</div>
+                <div class="fw-semibold text-success fs-5">{% currency_symbol %}{{ product.price|floatformat:2 }}</div>
             </div>
             <div class="col-sm-6">
                 <label class="form-label text-muted small">Stock Quantity</label>
