--- a/templates/admin_panel/product_edit_form.html
+++ b/templates/admin_panel/product_edit_form.html
@@ -1,3 +1,4 @@
+{% load restaurant_tags %}
 <form id="editProductForm" method="post" enctype="multipart/form-data" action="/admin-panel/products/{{ product.id }}/update/">
     {% csrf_token %}
     <div class="row g-4">
@@ -38,7 +39,7 @@
                             </select>
                         </div>
                         <div class="col-md-4">
-                            <label for="editProductPrice" class="form-label">Price ($) *</label>
+                            <label for="editProductPrice" class="form-label">Price ({% currency_symbol %}) *</label>
                             <input type="number" step="0.01" min="0.01" class="form-control" id="editProductPrice" name="price" value="{{ product.price }}" required>
                         </div>
                         <div class="col-md-4">
