--- a/templates/orders/cancel_order.html
+++ b/templates/orders/cancel_order.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Cancel Order - Restaurant System{% endblock %}
 
@@ -24,14 +25,14 @@
                         <p><strong>Order Number:</strong> {{ order.order_number }}</p>
                         <p><strong>Table:</strong> {{ order.table_info.tbl_no }}</p>
                         <p><strong>Customer:</strong> {{ order.ordered_by.get_full_name|default:order.ordered_by.username }}</p>
-                        <p><strong>Total:</strong> ${{ order.total_amount|floatformat:2 }}</p>
+                        <p><strong>Total:</strong> {% currency_symbol %}{{ order.total_amount|floatformat:2 }}</p>
                         <p><strong>Status:</strong> {{ order.get_status_display }}</p>
                         
                         <h6 class="mt-3">Items:</h6>
                         {% for item in order.order_items.all %}
                             <div class="d-flex justify-content-between">
                                 <span>{{ item.quantity }}x {{ item.product.name }}</span>
-                                <span>${{ item.get_subtotal|floatformat:2 }}</span>
+                                <span>{% currency_symbol %}{{ item.get_subtotal|floatformat:2 }}</span>
                             </div>
                         {% endfor %}
                     </div>
