--- a/templates/orders/customer_care_dashboard.html
+++ b/templates/orders/customer_care_dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Customer Care Dashboard - Restaurant System{% endblock %}
 
@@ -153,7 +154,7 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <strong>${{ order.total_amount|floatformat:2 }}</strong>
+                                        <strong>{% currency_symbol %}{{ order.total_amount|floatformat:2 }}</strong>
                                         {% if order.payment_status %}
                                         <br><span class="badge badge-sm bg-{% if order.payment_status == 'paid' %}success{% elif order.payment_status == 'partial' %}warning{% else %}secondary{% endif %}">
                                             {{ order.get_payment_status_display|default:"Unpaid" }}
