--- a/templates/orders/my_orders.html
+++ b/templates/orders/my_orders.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}My Orders - Restaurant System{% endblock %}
 
@@ -259,7 +260,7 @@
                             </div>
                             <div class="col-6">
                                 <small class="text-muted d-block">Total</small>
-                                <p class="mb-0 fw-bold text-success">${{ order.total_amount|floatformat:2 }}</p>
+                                <p class="mb-0 fw-bold text-success">{% currency_symbol %}{{ order.total_amount|floatformat:2 }}</p>
                             </div>
                         </div>
                         <div class="mb-2">
