--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Order List - Restaurant System{% endblock %}
 
@@ -60,7 +61,7 @@
                                 </span>
                             </td>
                             <td>{{ order.get_total_products }} items</td>
-                            <td><strong>${{ order.total_amount }}</strong></td>
+                            <td><strong>{% currency_symbol %}{{ order.total_amount }}</strong></td>
                             <td>
                                 <small>{{ order.created_at|date:"M d, Y H:i" }}</small>
                             </td>
