--- a/templates/restaurant/manage_products.html
+++ b/templates/restaurant/manage_products.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Manage Products - Restaurant System{% endblock %}
 
@@ -46,7 +47,7 @@
                                     {{ product.main_category.name }}<br>
                                     <small class="text-muted">{{ product.sub_category.name }}</small>
                                 </td>
-                                <td>${{ product.price }}</td>
+                                <td>{% currency_symbol %}{{ product.price }}</td>
                                 <td>
                                     <span class="badge bg-{% if product.available_in_stock > 10 %}success{% elif product.available_in_stock > 0 %}warning{% else %}danger{% endif %}">
                                         {{ product.available_in_stock }}
