--- a/templates/restaurant/promotion_preview.html
+++ b/templates/restaurant/promotion_preview.html
@@ -1,4 +1,5 @@
 {% extends 'admin_panel/base.html' %}
+{% load restaurant_tags %}
 
 {% block title %}Promotion Preview - Restaurant System{% endblock %}
 
@@ -118,14 +119,14 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <span class="text-decoration-line-through text-muted">${{ product.price }}</span>
+                                        <span class="text-decoration-line-through text-muted">{% currency_symbol %}{{ product.price }}</span>
                                     </td>
                                     <td>
-                                        <strong class="text-success">${{ product.get_current_price }}</strong>
+                                        <strong class="text-success">{% currency_symbol %}{{ product.get_current_price }}</strong>
                                     </td>
                                     <td>
                                         <span class="text-success">
-                                            ${% widthratio product.price 100 promotion.discount_percentage %}
+                                            {% currency_symbol %}{% widthratio product.price 100 promotion.discount_percentage %}
                                         </span>
                                     </td>
                                 </tr>
